# HotTargets

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  cmake_install.cmake
HotTarget/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Dashboard.cpp  ImageAnalyzer.cpp  ImageAnalyzer.hpp  ImageAnalyzer.py  ImageGateway.hpp  ImageGateway.py  ImageObject.hpp  ImageObjects.hpp  Makefile  Observable.hpp  Observable.hpp.gch  Observer.hpp.gch  ScoreAnalyzer.cpp  ScoreAnalyzer.hpp  ScoreAnalyzer.py  a.out  cmake_install.cmake  run  run.cpp  runWithScores.cpp  target.cpp  test.cpp  ~BGRObjects  ~ImageGatewaySingleton.hpp
HotTarget/Debug-build/: CMakeCache.txt  Makefile  cmake_install.cmake  run
HotTarget/Testing/: TAG
HotTarget/Testing/20140201-1922/: Build.xml  Configure.xml  Test.xml
HotTarget/Testing/20140201-2029/: Build.xml  Configure.xml  Test.xml
HotTarget/Testing/20140201-2144/: Build.xml  Configure.xml  Test.xml
HotTarget/Testing/Temporary/: CTestCostData.txt
Testing/Temporary/: CTestCostData.txt
images/: CMakeLists.txt  Makefile  cmake_install.cmake
src/: CMakeLists.txt  CMakeLists.txt~  ImageAnalyzer.cpp  ImageAnalyzer.hpp  ImageGateway.hpp  ImageObject.hpp  ImageObjects.hpp  Makefile  NetTable.cpp  NetTable.hpp  NetworkTable.cpp  NetworkTable.hpp  Observable.hpp  Observable.hpp.gch  Observer.hpp  Observer.hpp.gch  ScoreAnalyzer.hpp  a.out  cmake_install.cmake  run  run.cpp  run.cpp~
